* Improved the whole structure and prepare for first release

--- a/jmx/pom.xml
+++ b/jmx/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <artifactId>jemoni</artifactId>
         <groupId>org.echocat</groupId>
-        <version>0.1.0</version>
+        <version>0.1.0-SNAPSHOT</version>
     </parent>
 
     <name>echocat JeMoni JMX</name>
