--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <groupId>org.echocat</groupId>
     <artifactId>jemoni</artifactId>
     <packaging>pom</packaging>
-    <version>0.1.0</version>
+    <version>0.1.0-SNAPSHOT</version>
     <url>https://jemoni.echocat.org</url>
 
     <modules>
@@ -48,7 +48,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.basePackages>${project.groupId}.${project.artifactId}</project.build.basePackages>
 
-        <versions.org.echocat.jomon>1.1.1-SNAPSHOT</versions.org.echocat.jomon>
+        <versions.org.echocat.jomon>1.2.5</versions.org.echocat.jomon>
         <versions.springframework>3.1.2.RELEASE</versions.springframework>
     </properties>
 
@@ -181,6 +181,16 @@
                             <version>2.3</version>
                         </dependency>
                     </dependencies>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>2.4</version>
+                    <configuration>
+                        <tagNameFormat>version-@{project.version}</tagNameFormat>
+                        <arguments>-DskipTests</arguments>
+                        <scmCommentPrefix>* [RELEASE] </scmCommentPrefix>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
