--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,7 @@
                     <configuration>
                         <source>1.7</source>
                         <target>1.7</target>
+                        <compilerArgument>-XDignore.symbol.file=true</compilerArgument>
                     </configuration>
                 </plugin>
                 <plugin>
