* [RELEASE]prepare release version-0.1.6

--- a/bundle/pom.xml
+++ b/bundle/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <artifactId>jemoni</artifactId>
         <groupId>org.echocat</groupId>
-        <version>0.1.6-SNAPSHOT</version>
+        <version>0.1.6</version>
     </parent>
 
     <name>echocat JeMoni Bundle</name>
