--- a/carbon/pom.xml
+++ b/carbon/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <artifactId>jemoni</artifactId>
         <groupId>org.echocat</groupId>
-        <version>0.1.9-SNAPSHOT</version>
+        <version>0.1.9</version>
     </parent>
 
     <name>echocat JeMoni Carbon</name>
