--- a/jmx/pom.xml
+++ b/jmx/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <artifactId>jemoni</artifactId>
         <groupId>org.echocat</groupId>
-        <version>0.1.9</version>
+        <version>0.1.10-SNAPSHOT</version>
     </parent>
 
     <name>echocat JeMoni JMX</name>
